[package]
name = "broker-connections-gateway"
version = "0.1.0"
authors = ["Carlos Langoni"]
edition = "2021"
description = "Monitor de conexões ao broker Diel. Baseado em https://github.com/bytebeamio/rumqtt/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "broker-connections-gateway"
path = "./src/main.rs"

[[bin]]
name = "broker-devel-gateway"
path = "./src/main_devel.rs"

[[bin]]
name = "broker-gateway-notls"
path = "./src/main_notls.rs"

[dependencies]
tokio = { version = "1.38.1", features = ["rt", "net", "io-util", "time", "macros", "sync"] }
serde = { version = "1.0.204", features = ["derive"] }
bytes = "1.6.1"
futures-util = "0.3.30"
rustls-pemfile = "2.1.2"
tokio-rustls = "0.26.0"
jemallocator = "0.5.4"
chrono = "0.4.38"
tokio-native-tls = "0.3.1"
native-tls = "0.2.12"
rand = "0.8.5"
serde_json = "1.0.120"
x509-parser = "0.16.0"
regex = "1.10.5"
webpki = { version = "0.22.4", features = ["std"] }
futures = "0.3.30"
json5 = "0.4.1"
httparse = "1.9.4"
reqwest = { version = "0.12.5", features = ["rustls-tls", "json"] }
